fix: set z-index of ember dropdowns to be lower than the modal background dropdowns
Refs: bnb-948

--- a/app/styles/_shame.scss
+++ b/app/styles/_shame.scss
@@ -487,7 +487,11 @@ ol.less-margin {
   top: 0;
   overflow: hidden;
   width: 100%;
-  z-index: 99;
+  z-index: 10;
   background-color: var(--au-white);
   max-height: 4.8rem;
+}
+
+.ember-basic-dropdown-trigger {
+  z-index: 9;
 }
